# bridge

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh  test_flow.sh  turbo.json  verify_webmcp_e2e.py
apps/api/: bridge.json  bridge_update.json  check_url_simple.py  debug_output_full.txt  main.py  migrate_interaction.py  migrate_session.py  migrate_slugs.py  migrate_webmcp.py  pyproject.toml  scan.sh  scan_domain.py  test.db  test_celery.py  test_webmcp_manual.py  verify.sh  verify_auth_manager.py  verify_ethic.py  verify_handshake.py  verify_schema.py  verify_state_engine.py
apps/api/app/core/: celery.py  config.py  database.py  encryption.py  redis.py  security.py  watcher.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/routers/: __init__.py  bridge.py  handshake.py  key.py  llm.py  webhooks.py  webmcp.py
apps/api/app/schemas/: bridge.py  webhook.py
apps/api/app/services/: crawler.py  discovery.py  extractor.py  interaction.py  outreach.py  permissions.py  scanner.py  state.py  tasks.py  webmcp.py
apps/api/app/services/llm/: __init__.py  base.py  failover.py
apps/api/app/services/llm/providers/: anthropic.py  cohere.py  google.py  groq.py  mistral.py  ollama.py  openai.py  openrouter.py
apps/api/tests/: test_interaction.py  test_surveyor_batch.py
apps/mcp-server/: main.py  pyproject.toml
apps/web/: package.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: sidebar.tsx
apps/web/src/lib/: api.ts
infrastructure/docker/: init.sql
(+12 files in other folders)
